--- a/.github/actions/setup-project/action.yml
+++ b/.github/actions/setup-project/action.yml
@@ -5,7 +5,7 @@ runs:
   using: "composite"
   steps:
     - name: Configure node
-    - uses: actions/setup-node@v4
+      uses: actions/setup-node@v4
       with:
         node-version-file: ".nvmrc"
 
