--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -36,7 +36,7 @@ runs:
       shell: bash
 
     - name: Comment with preview URL
-      if: ${{ inputs.mode == "preview" }}
+      if: ${{ inputs.mode == 'preview' }}
       uses: actions/github-script@v7
         with:
           script: |
