--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Deploy to Vercel preview env
         uses: ./.github/actions/deploy-vercel
         with:
-          mode: "preview"
+          mode: preview
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
