--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -18,7 +18,7 @@ runs:
       shell: bash
 
     - name: PROD Vercel Deployment
-      if: ${{ inputs.mode == 'production' }}
+      if: ${{ inputs.mode === 'production' }}
       run: |
         vercel pull --yes --environment=production --token=${{ inputs.vercel-token }}
         vercel build --prod --token=${{ inputs.vercel-token }}
@@ -26,7 +26,7 @@ runs:
       shell: bash
 
     - name: PREVIEW Vercel Deployment
-      if: ${{ inputs.mode == 'preview' }}
+      if: ${{ inputs.mode === 'preview' }}
       run: |
         vercel pull --yes --environment=preview --token=${{ inputs.vercel-token }}
         vercel build --token=${{ inputs.vercel-token }}
@@ -36,7 +36,7 @@ runs:
       shell: bash
 
     - name: Comment with preview URL
-      if: ${{ inputs.mode == 'preview' }}
+      if: ${{ inputs.mode === 'preview' }}
       uses: actions/github-script@v7
         with:
           script: |
