feat: proj enviroments

--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -1,11 +1,13 @@
-name: Deploy
+name: Deploy - Vercel
 
 on:
   workflow_call:
 
 jobs:
-  deploy:
+  deploy-vercel:
     runs-on: ubuntu-latest
+    environment:
+      name: "Staging"
 
     steps:
       - name: Checkout repository
