--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,8 +6,10 @@ on:
       - main
 
 jobs:
-  deploy-pr:
+  pr-check:
     runs-on: ubuntu-latest
+    environment:
+      name: "Preview"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
