--- a/.github/workflows/deploy-netlify.yml
+++ b/.github/workflows/deploy-netlify.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy - Netlify
 
 on:
   workflow_call:
@@ -9,8 +9,10 @@ on:
         required: true
 
 jobs:
-  deploy:
+  deploy-netlify:
     runs-on: ubuntu-latest
+    environment:
+      name: "Development"
 
     steps:
       - name: Checkout repository
