--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -25,5 +25,12 @@ jobs:
       - name: Build application
         run: npm run build
 
+      - name: Configure AWS Creditentials
+        uses: aws-actions/configure-aws-credentials@v4.0.2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
       - name: Deploy to AWS
         run: aws s3 sync dist s3://pgosk-aws-test
