--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -32,5 +32,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
 
+      - name: Invalidate AWS cache
+        run: aws cloudfront create-invalidation --distribution-id E27A22Z02VSS2J --paths "/*"
+
       - name: Deploy to AWS
         run: aws s3 sync dist s3://pgosk-aws-test
