--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,11 +17,8 @@ jobs:
       - name: Configure node
         uses: ./.github/actions/setup-project
 
-      - name: Lint code
-        run: npm run lint
-
-      - name: Run unit tests
-        run: npm run test
+      - name: Code check
+        uses: ./.github/actions/code-checks
 
       - name: Deploy to Vercel preview env
         uses: ./.github/actions/deploy-vercel
