--- a/.github/actions/code-checks/action.yml
+++ b/.github/actions/code-checks/action.yml
@@ -3,9 +3,7 @@ description: Lint and unit tests
 
 runs:
   using: "composite"
-  - name: Configure node
-    uses: ./.github/actions/setup-project
-
+  steps:
   - name: Lint code
     run: npm run lint
 
